load("@crates//:defs.bzl", "aliases", "all_crate_deps")

load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_proc_macro", "rust_test")



filegroup(

    name = "cargo_manifest",

    srcs = ["Cargo.toml"],

    visibility = ["//visibility:public"],

)



filegroup(

    name = "package_runfiles",

    srcs = glob(["Cargo.toml", "**/*"], exclude = ["BUILD", "BUILD.bazel"], allow_empty = True),

    visibility = ["//visibility:public"],

)



rust_library(
    name = "meerkat_contracts",
    aliases = aliases(package_name = "meerkat-contracts"),
    crate_name = "meerkat_contracts",
    crate_root = "src/lib.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
    ),
)

rust_library(
    name = "meerkat_contracts_agent_factory_build",
    aliases = aliases(package_name = "meerkat-contracts"),
    crate_name = "meerkat_contracts",
    crate_root = "src/lib.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = [
        "//meerkat:__pkg__",
    ],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
    ),
    deps = [
        "//meerkat:meerkat_capabilities_agent_factory_build",
        "//meerkat:meerkat_core_agent_factory_build",
        "//meerkat:meerkat_schedule_agent_factory_build",
        "//meerkat:meerkat_workgraph_agent_factory_build",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
    ),
)

rust_test(
    name = "meerkat_contracts_unit_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "meerkat_contracts",
    crate_root = "src/lib.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
        "unit",
    ],
    size = "small",
    data = [
        ":package_runfiles",
    ],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_binary(
    name = "emit_schemas_bin",
    aliases = aliases(package_name = "meerkat-contracts"),
    crate_name = "emit_schemas",
    crate_root = "src/bin/emit-schemas.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = glob(["src/**/*.rs"]),
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "emit-schemas",
        "CARGO_MANIFEST_DIR": "meerkat-contracts",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
    ),
)

rust_test(
    name = "auth_binding_wire_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "auth_binding_wire",
    crate_root = "tests/auth_binding_wire.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/auth_binding_wire.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "auth_binding_wire",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [
        ":package_runfiles",
    ],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "image_generation_wire_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "image_generation_wire",
    crate_root = "tests/image_generation_wire.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/image_generation_wire.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "image_generation_wire",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "live_audio_format_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "live_audio_format",
    crate_root = "tests/live_audio_format.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/live_audio_format.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "live_audio_format",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "live",
    ],
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "live_barge_in_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "live_barge_in",
    crate_root = "tests/live_barge_in.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/live_barge_in.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "live_barge_in",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "live",
    ],
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "live_deadline_and_jitter_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "live_deadline_and_jitter",
    crate_root = "tests/live_deadline_and_jitter.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/live_deadline_and_jitter.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "live_deadline_and_jitter",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "live",
    ],
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "mob_wire_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "mob_wire",
    crate_root = "tests/mob_wire.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/mob_wire.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "mob_wire",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "regression_wire_types_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "regression_wire_types",
    crate_root = "tests/regression_wire_types.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/regression_wire_types.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "regression_wire_types",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "runtime_turn_metadata_wire_override_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "runtime_turn_metadata_wire_override",
    crate_root = "tests/runtime_turn_metadata_wire_override.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/runtime_turn_metadata_wire_override.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "runtime_turn_metadata_wire_override",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "session_accept_input_typed_round_trip_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "session_accept_input_typed_round_trip",
    crate_root = "tests/session_accept_input_typed_round_trip.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/session_accept_input_typed_round_trip.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "session_accept_input_typed_round_trip",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

rust_test(
    name = "skill_ref_wire_no_legacy_test",
    aliases = aliases(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
        proc_macro = True,
        proc_macro_dev = True,
    ),
    crate_name = "skill_ref_wire_no_legacy",
    crate_root = "tests/skill_ref_wire_no_legacy.rs",
    crate_features = [
        "schema",
    ],
    edition = "2024",
    compile_data = [
        "Cargo.toml",
    ],
    srcs = [
        "tests/skill_ref_wire_no_legacy.rs",
    ],
    visibility = ["//visibility:public"],
    rustc_env = {
        "CARGO_PKG_VERSION": "0.6.19",
        "CARGO_BIN_NAME": "skill_ref_wire_no_legacy",
        "CARGO_MANIFEST_DIR": "./meerkat-contracts",
    },
    tags = [
        "fast",
    ],
    size = "small",
    data = [],
    env = {
        "RUST_MIN_STACK": "16777216",
    },
    proc_macro_deps = all_crate_deps(
        package_name = "meerkat-contracts",
        proc_macro = True,
        proc_macro_dev = True,
    ),
    deps = [
        "//meerkat-capabilities:meerkat_capabilities",
        "//meerkat-contracts:meerkat_contracts",
        "//meerkat-core:meerkat_core",
        "//meerkat-schedule:meerkat_schedule",
        "//meerkat-workgraph:meerkat_workgraph",
    ] + all_crate_deps(
        package_name = "meerkat-contracts",
        normal = True,
        normal_dev = True,
    ),
)

test_suite(
    name = "fast_tests",
    tests = [
        ":auth_binding_wire_test",
        ":image_generation_wire_test",
        ":meerkat_contracts_unit_test",
        ":mob_wire_test",
        ":regression_wire_types_test",
        ":runtime_turn_metadata_wire_override_test",
        ":session_accept_input_typed_round_trip_test",
        ":skill_ref_wire_no_legacy_test",
    ],
)
