[package]
name = "meerkat-contracts"
description = "Wire format contracts and generated surface schemas for Meerkat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
schema = [
    "dep:schemars",
    "meerkat-capabilities/schema",
    "meerkat-core/schema",
    "meerkat-schedule/schema",
    "meerkat-workgraph/schema",
]

[dependencies]
meerkat-capabilities = { workspace = true }
meerkat-core = { workspace = true }
meerkat-schedule = { workspace = true }
meerkat-workgraph = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }

# Feature-gated
schemars = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "test-util"] }
async-trait = { workspace = true }
serde_json = { workspace = true }
jsonschema = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["tokio"]  # dev-dependency used in test runtime

[lints]
workspace = true

[[bin]]
name = "emit-schemas"
required-features = ["schema"]
