[package]
name = "meerkat-core"
description = "Core agent logic for Meerkat (no I/O deps)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
humantime-serde = { workspace = true }
ulid = { workspace = true }
meerkat-comms = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
schemars = { workspace = true }

[lints]
workspace = true
