[package]
name = "meerkat-core"
description = "Core agent logic for Meerkat (no I/O deps)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
humantime-serde = { workspace = true }
jsonschema = { workspace = true, optional = true }
schemars = { workspace = true }
strum = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
parking_lot = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1.11", features = ["v4", "v7", "serde", "js"] }

[features]
default = ["schema", "jsonschema"]
schema = []
jsonschema = ["dep:jsonschema"]

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
