[package]
name = "meerkat-gemini"
description = "Google Gemini vertical for Meerkat: LLM client, provider runtime, catalog, capabilities, profile, and Code Assist OAuth + ADC backends."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
meerkat-core = { workspace = true }
meerkat-llm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
chrono = { workspace = true }
indexmap = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
meerkat-auth-core = { workspace = true }
reqwest = { workspace = true }
base64 = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
tempfile = { workspace = true }
meerkat-auth-core = { workspace = true, features = ["oauth", "gcp-auth"] }

[features]
default = ["oauth", "adc"]
oauth = ["meerkat-auth-core/oauth"]
adc = ["meerkat-auth-core/gcp-auth"]

[package.metadata.cargo-machete]
ignored = ["getrandom", "base64", "indexmap", "tempfile"]

[lints]
workspace = true
